<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Library_test</string>
    <string name="action_settings">Settings</string>
    <string name="spinner_prompt">Select a Category</string>
    <string name="book_title">This is the title of the book</string>
    <string name="book_author">By Last Name, First</string>
    <string name="book_publication">Publication Year: </string>
    <string name="book_genre">Genre: </string>
    <string name="book_summary">Summary: </string>
    <string name="book_tags">Tags: </string>
    <string name="book_is_read">Has been read: </string>
    <string name="book_rating">Rating: </string>
    <string name="edit_book">Edit Book</string>
    
    <string-array name="selections_array">
        <item>Author (Last Name)</item>
        <item>Genre</item>
        <item>Publication Year</item>
        <item>Rating</item>
        <item>Tag</item>
        <item>Title</item>
    </string-array>
    <string name="search_button">Search</string>

</resources>
