<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/main_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true" 
        layout="@layout/main_nav"/>

    <TextView
        android:id="@+id/book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/book_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/book_author"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       	android:layout_above="@+id/main_nav_bar"
        android:layout_below="@+id/book_author" >

        <RelativeLayout
            android:id="@+id/main_book_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/book_publication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/book_publication"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/book_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_publication"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/book_genre"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_genre"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/book_summary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_summary"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/book_tags"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_is_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_tags"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/book_is_read"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_is_read"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/book_rating"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>

    <Button 
        android:id="@+id/button_edit_existing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_book"
        android:layout_above="@+id/main_nav_bar"
        android:layout_alignParentRight="true"
        android:onClick="passBookForEdit"/>
</RelativeLayout>